{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 880,
  "lineage": "77e2bbd0-8212-5187-e2bf-0c6e59085f42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051bb29e3fa4b3213",
            "arn": "arn:aws:ec2:ap-south-1:135808944307:elastic-ip/eipalloc-051bb29e3fa4b3213",
            "domain": "vpc",
            "id": "eipalloc-051bb29e3fa4b3213",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-2-241.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.2.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Message App  VPC NAT IP"
            },
            "tags_all": {
              "Name": "Message App  VPC NAT IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:internet-gateway/igw-0afcb68bd5116ed15",
            "id": "igw-0afcb68bd5116ed15",
            "owner_id": "135808944307",
            "tags": {
              "Name": "Message App  VPC IG"
            },
            "tags_all": {
              "Name": "Message App  VPC IG"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051bb29e3fa4b3213",
            "association_id": "eipassoc-07946774b72683c15",
            "connectivity_type": "public",
            "id": "nat-0a646e95b9851ead0",
            "network_interface_id": "eni-01682585793d7cbe7",
            "private_ip": "10.1.1.201",
            "public_ip": "43.205.2.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb62cf3cd49aedf3"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:route-table/rtb-0aa4aa1ef170a4848",
            "id": "rtb-0aa4aa1ef170a4848",
            "owner_id": "135808944307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a646e95b9851ead0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Message App  Private Route Table"
            },
            "tags_all": {
              "Name": "Message App  Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:route-table/rtb-0efbc81452d819335",
            "id": "rtb-0efbc81452d819335",
            "owner_id": "135808944307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afcb68bd5116ed15",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Message App  Public Route Table"
            },
            "tags_all": {
              "Name": "Message App  Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e30d5a3697fd2a",
            "route_table_id": "rtb-0aa4aa1ef170a4848",
            "subnet_id": "subnet-0590c4984212e22cb"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8593160ab2bc8a3",
            "route_table_id": "rtb-0aa4aa1ef170a4848",
            "subnet_id": "subnet-044412100debf73ec"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aa87e9c53673f57",
            "route_table_id": "rtb-0aa4aa1ef170a4848",
            "subnet_id": "subnet-0e0a6bb750c2bdd77"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04117410afeec5b36",
            "route_table_id": "rtb-0efbc81452d819335",
            "subnet_id": "subnet-0eb62cf3cd49aedf3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04acd05f8415fb404",
            "route_table_id": "rtb-0efbc81452d819335",
            "subnet_id": "subnet-0bf0b5a7a31503ad8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01326fa6e13750971",
            "route_table_id": "rtb-0efbc81452d819335",
            "subnet_id": "subnet-0a02761c3a2584153"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:security-group/sg-035854a2a5204c4c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-035854a2a5204c4c0",
            "ingress": [],
            "name": "all_worker_management20240926005545821300000004",
            "name_prefix": "all_worker_management",
            "owner_id": "135808944307",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1015815566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-035854a2a5204c4c0",
            "security_group_rule_id": "sgr-030fb9df6c99261cd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1678790317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-035854a2a5204c4c0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-0590c4984212e22cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0590c4984212e22cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App  Private Subnet 1"
            },
            "tags_all": {
              "Name": "Message App  Private Subnet 1"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-044412100debf73ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044412100debf73ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App  Private Subnet 2"
            },
            "tags_all": {
              "Name": "Message App  Private Subnet 2"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-0e0a6bb750c2bdd77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0a6bb750c2bdd77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App  Private Subnet 3"
            },
            "tags_all": {
              "Name": "Message App  Private Subnet 3"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-0eb62cf3cd49aedf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb62cf3cd49aedf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App Public Subnet 1"
            },
            "tags_all": {
              "Name": "Message App Public Subnet 1"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-0bf0b5a7a31503ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf0b5a7a31503ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App Public Subnet 2"
            },
            "tags_all": {
              "Name": "Message App Public Subnet 2"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:subnet/subnet-0a02761c3a2584153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a02761c3a2584153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808944307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Message App Public Subnet 3"
            },
            "tags_all": {
              "Name": "Message App Public Subnet 3"
            },
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "dependencies": [
            "aws_vpc.message_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "message_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:vpc/vpc-04a1913b50b2f1707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00d31f6499d1392ff",
            "default_route_table_id": "rtb-0d70ab69d7eeea9d9",
            "default_security_group_id": "sg-0f578591c42a3c8d7",
            "dhcp_options_id": "dopt-0926c95c2993fbb2f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a1913b50b2f1707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d70ab69d7eeea9d9",
            "owner_id": "135808944307",
            "tags": {
              "Name": "Message App VPC"
            },
            "tags_all": {
              "Name": "Message App VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:security-group/sg-04ba4118332e9e06e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04ba4118332e9e06e",
            "ingress": [],
            "name": "message-app-eks-cluster-cluster-20240926005546346600000006",
            "name_prefix": "message-app-eks-cluster-cluster-",
            "owner_id": "135808944307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "message-app-eks-cluster-cluster",
              "cluster": "message-app"
            },
            "tags_all": {
              "Name": "message-app-eks-cluster-cluster",
              "cluster": "message-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:135808944307:security-group/sg-08f0ffbeeac53d8ca",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-08f0ffbeeac53d8ca",
            "ingress": [],
            "name": "message-app-eks-cluster-node-20240926005545821700000005",
            "name_prefix": "message-app-eks-cluster-node-",
            "owner_id": "135808944307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "message-app-eks-cluster-node",
              "cluster": "message-app",
              "kubernetes.io/cluster/message-app-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "message-app-eks-cluster-node",
              "cluster": "message-app",
              "kubernetes.io/cluster/message-app-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a1913b50b2f1707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1099863530",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ba4118332e9e06e",
            "security_group_rule_id": "sgr-04d8e8ea0b78dc232",
            "self": false,
            "source_security_group_id": "sg-08f0ffbeeac53d8ca",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2320193399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-005b13a21bb7bc508",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-650486177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-02f3c33985050f320",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2299935586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-084fd8c0ea8f81aeb",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1079270644",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-0d0433dbe85e815f7",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1393058005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-0f48abab4cd71dbf0",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-933843742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-0f9ec35092b0c95a8",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3263020520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-0ada462bbe09b5d1d",
            "self": false,
            "source_security_group_id": "sg-04ba4118332e9e06e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1015201114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-023200c99612ba32f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-715198103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-026c63870a241856d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2399055224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08f0ffbeeac53d8ca",
            "security_group_rule_id": "sgr-0dd38e71e7b3bc25b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.message_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}